fixed project overflow

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -272,8 +272,18 @@ footer {
     font-size: 18px;
 }
 
+/*Macbook & Large Laptop*/
+@media screen and (max-width: 1500px) {
+    
+}
+
+/*Normal Laptop*/
 @media screen and (max-width: 1200px) {
-    html {
-        /*overflow: hidden;*/
-    }
+    
+}
+
+/* TODO - set up mobile
+Mobile*/
+@media screen and (max-width: 600px) {
+    
 }
